# MilliMon

./: .ccls  .gitignore  CMakeLists.txt  README.md  postprocess_digitizer.cpp
apps/: CMakeLists.txt  apps.cpp
include/: tdrstyle.C
include/milliqan/: DigitizerOutput.h  Pulse.h  TriggerBoardOutput.h  constants.h  lib.h  mappings.h
python/: README.md  plot_rate.py  run_monitoring.py  test_triggerBoard.py  triggerBoard.py
scripts/: quick_plot_and_send.sh
src/: CMakeLists.txt  DigitizerOutput.cpp  Pulse.cpp  TriggerBoardOutput.cpp  lib.cpp  mappings.cpp
